--- a/ApplicationDev/WeeklyReport.resx
+++ b/ApplicationDev/WeeklyReport.resx
@@ -126,4 +126,47 @@
   <metadata name="totalMinWeek.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="sortA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH4wEbCjUQVG1tpgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGESURBVEhL
+        7ZS/K0VhGMdPfiwWYpCyMJCJkmtVTKa7WUyUgfWaDGxm2e90B7lRfpSSQVn8A6x3kESSDH6VXp/nfZ/T
+        4Z73HIeOMvjUp9v5Pt/ep3PvuSfwYYzZwpCKxl6Y9+GFbRrTo3E6FA9d37KjcQxmA3hpW478FpA34Bk+
+        4DkKud/BII7ivhQh3wUhdP4XpEPndxYwG8MJPJUiTKNcd2rFD4WsC+5dJcaUVvxQ+O4d1JvPHfwYDv07
+        C5i3YAHlH92kcToUs/4Gk3hjW44aFnScDKUvF5B3o7zo7nABV/AFZWGH1vxQyLJg1o3NkkaSlVxkShr5
+        oZBlwbwbm0WNJJO3q1DVKIKwHXvVEww5wjBv07r0+/EVr7CIQ7iBwoHWIgjX3SyVVa1buJ7DZztxXOtn
+        WSsRhM24bcd+NjH2GJJ1oTxNI7iGwoyOP8MgaYn38I8wH8YnvMVWjeMwrF+SeDj5Mu7iHsrhb1jUcTKU
+        ZEkVK9iocQxmZZTv/RGPcVxHShC8A5pfbBdwZKW1AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="sortD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH4wEbCjUQVG1tpgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGESURBVEhL
+        7ZS/K0VhGMdPfiwWYpCyMJCJkmtVTKa7WUyUgfWaDGxm2e90B7lRfpSSQVn8A6x3kESSDH6VXp/nfZ/T
+        4Z73HIeOMvjUp9v5Pt/ep3PvuSfwYYzZwpCKxl6Y9+GFbRrTo3E6FA9d37KjcQxmA3hpW478FpA34Bk+
+        4DkKud/BII7ivhQh3wUhdP4XpEPndxYwG8MJPJUiTKNcd2rFD4WsC+5dJcaUVvxQ+O4d1JvPHfwYDv07
+        C5i3YAHlH92kcToUs/4Gk3hjW44aFnScDKUvF5B3o7zo7nABV/AFZWGH1vxQyLJg1o3NkkaSlVxkShr5
+        oZBlwbwbm0WNJJO3q1DVKIKwHXvVEww5wjBv07r0+/EVr7CIQ7iBwoHWIgjX3SyVVa1buJ7DZztxXOtn
+        WSsRhM24bcd+NjH2GJJ1oTxNI7iGwoyOP8MgaYn38I8wH8YnvMVWjeMwrF+SeDj5Mu7iHsrhb1jUcTKU
+        ZEkVK9iocQxmZZTv/RGPcVxHShC8A5pfbBdwZKW1AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH4wEaEC4YWo1vzQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFlSURBVDhP
+        dZK7LkRBGIBXQSHRSESh0lpewHoEtU6D3eVBlLvWiojaW7g0G6yEQrIoCa0Ojevxfef8x3X3S75k/svM
+        mZkzhb8kSTKJDbzAp9Cxuclo+w/FAdzEd+zFG27gQEzLMIEHmHOEFSyFjo8xZx+/FyHwy/KMi5H+B7Wl
+        6JFmnvTMbk0WIjeIq3iOZ+j5R6JWRnFO0YRFOYyGIbxKM0lyiafovdzjaPS0UeoGNkkliuv4gfPGwnga
+        lyM0XkbpGDxk46QUxRtsp509oD7jBHjotsAtttLOHlD/tUB+hGoUt9Ezz6bdwHgK5yI0XkFJj7CWjZOj
+        KA6ju/AeWriLL+hOx7APT1BqTihi/huXfiyyhXd4jTs4HjUflThnwpxJn6f4SMpp8g/k/XI1eqQRpbTo
+        U/Z55vif/VVelnrmfNuyh/0xPYOEizQxP043XtGH93vyTyh6J3Xs4GPouIbZmb8oFD4BM6CQ8Autj+EA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
